--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+<!--    &lt;!&ndash; Base application theme. &ndash;&gt;-->
+<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+<!--&lt;!&ndash;        <item name="colorPrimary">@color/primary_color</item>&ndash;&gt;-->
 <!--        <item name="colorPrimary">@color/primary_color</item>-->
-        <item name="colorPrimary">@color/primary_color</item>
+<!--&lt;!&ndash;        <item name="colorPrimaryDark">@color/primary_dark_color</item>&ndash;&gt;-->
 <!--        <item name="colorPrimaryDark">@color/primary_dark_color</item>-->
-        <item name="colorPrimaryDark">@color/primary_dark_color</item>
-    </style>
+<!--    </style>-->
 
     <!-- Style for a category of vocabulary words -->
     <style name="CategoryStyle">
@@ -17,8 +17,21 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">26sp</item>
         <item name="android:textAlignment" tools:ignore="NewApi">center</item>
+    </style>
+
+    <style name="Conteudo">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/layout_shadow_white</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:elevation" tools:ignore="NewApi">2dp</item>
+        <item name="android:layout_marginRight">15dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
     </style>
 
     <style name="appBar">
