--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,15 +21,9 @@
 
     <LinearLayout
         android:id="@+id/numbers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/layout_shadow_white"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:elevation="2dp"
-        android:layout_margin="10dp">
+        style="@style/Conteudo" >
 
-        <TextView
+    <TextView
             android:layout_height="match_parent"
             style="@style/CategoryStyle"
             android:text="@string/category_numbers"
@@ -45,15 +39,9 @@
 
     <LinearLayout
         android:id="@+id/family"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@drawable/layout_shadow_white"
-        android:orientation="horizontal"
-        android:elevation="2dp"
-        android:layout_margin="10dp" >
+        style="@style/Conteudo" >
 
-        <TextView
+    <TextView
             android:layout_height="match_parent"
             style="@style/CategoryStyle"
             android:text="@string/category_family"
@@ -68,13 +56,7 @@
 
     <LinearLayout
         android:id="@+id/colors"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@drawable/layout_shadow_white"
-        android:orientation="horizontal"
-        android:elevation="2dp"
-        android:layout_margin="10dp" >
+        style="@style/Conteudo" >
 
         <TextView
             android:layout_height="match_parent"
@@ -92,16 +74,9 @@
 
     <LinearLayout
         android:id="@+id/phrases"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/layout_shadow_white"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:onClick="openPhrasesList"
-        android:elevation="2dp"
-        android:layout_margin="10dp" >
+        style="@style/Conteudo" >
 
-        <TextView
+    <TextView
             android:layout_height="match_parent"
             style="@style/CategoryStyle"
             android:text="@string/category_phrases"
