--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -33,7 +33,7 @@
 
         <ListView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/list"
+            android:id="@+id/list_number"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
