--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:orientation="vertical"
-        android:layout_weight="3">
+        android:layout_margin="8dp"
+        android:layout_weight="4">
 
         <TextView
             android:id="@+id/portugues_text_view"
@@ -40,6 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:id="@+id/image2"
-        android:layout_weight="1" />
+        android:layout_weight="0.7"/>
 
 </LinearLayout>
