--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,12 +3,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp">
 
     <ImageView
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="0dp"
         android:id="@+id/image1"
         android:layout_weight="1" />
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textAlignment="center"
-            tools:text="one"/>
+            tools:text="portugues"/>
 
         <TextView
             android:id="@+id/english_text_view"
@@ -34,11 +34,11 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textAlignment="center"
-            tools:text="lutti"/>
+            tools:text="english"/>
     </LinearLayout>
 
     <ImageView
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="0dp"
         android:id="@+id/image2"
         android:layout_weight="0.7"/>
