--- a/app/src/main/res/drawable-v21/layout_shadow_white.xml
+++ b/app/src/main/res/drawable-v21/layout_shadow_white.xml
@@ -1,5 +1,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#ffffff">
+    android:color="#6dcaae">
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#CABBBBBB"/>
